[gd_scene load_steps=9 format=3 uid="uid://2lk686b1mi6t"]

[ext_resource type="Script" uid="uid://mvndfdn18yj3" path="res://assets/scripts/player/projectiles/pierce_projectile.gd" id="1_nf1mf"]
[ext_resource type="Texture2D" uid="uid://bxldvc013vdxx" path="res://assets/sprites/player/projectiles/laser_sheet.png" id="2_nf1mf"]
[ext_resource type="AudioStream" uid="uid://doexa11ci6rr8" path="res://assets/sound/sfx/projectileHit.ogg" id="3_ngklr"]
[ext_resource type="Script" uid="uid://cjg283ev7g21t" path="res://assets/scripts/player/projectiles/projectile_hit_sfx.gd" id="4_iy8bp"]

[sub_resource type="Animation" id="Animation_54i66"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_4m8v1"]
resource_name = "default"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ommkd"]
_data = {
&"RESET": SubResource("Animation_54i66"),
&"default": SubResource("Animation_4m8v1")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4m8v1"]
radius = 15.0
height = 42.0

[node name="pierceProjectile" type="Node2D"]
top_level = true
z_index = -1
rotation = -1.5707964
script = ExtResource("1_nf1mf")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 5
rotation = 1.5707964
texture = ExtResource("2_nf1mf")
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_ommkd")
}
autoplay = "default"

[node name="Area2D" type="Area2D" parent="."]
rotation = 1.5707964
collision_layer = 4
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -1)
shape = SubResource("CapsuleShape2D_4m8v1")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(8, 3.4969113e-07)
scale = Vector2(2, 1.5)
rect = Rect2(-12.982311, -10, 21.82737, 20)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ngklr")
bus = &"SFX"
script = ExtResource("4_iy8bp")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
